<resources>
    <string name="app_name">NotePlus</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open...</string>
    <string name="action_save_as">Save As...</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_about">About</string>
    <string name="edit_text_hint">Enter your text here...</string>
    <string name="dialog_save_as_title">Save as...</string>
</resources>
