<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_open"
        android:title="@string/action_open"
        app:showAsAction="never" />

    <item android:id="@+id/action_save_as"
        android:title="@string/action_save_as"
        app:showAsAction="never" />

    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        app:showAsAction="never" />

    <item android:id="@+id/action_redo"
        android:title="@string/action_redo"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
